// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't accept old walking directions 1`] = `
Object {
  "coords": Array [],
  "destination": Object {
    "latitude": 0,
    "longitude": 0,
  },
  "distance": "",
  "duration": "",
  "error": "",
  "isFetching": false,
  "origin": Object {
    "latitude": 0,
    "longitude": 0,
  },
}
`;

exports[`errors when HTTP request fails 1`] = `
Array [
  Object {
    "destination": Object {
      "latitude": 54.213,
      "longitude": 19.123,
    },
    "type": "REQUEST_WALKING_DIRECTIONS",
  },
  Object {
    "error": "Service unavailable!",
    "type": "ERROR_WALKING_DIRECTIONS",
  },
]
`;

exports[`errors when geolocation fails 1`] = `
Array [
  Object {
    "destination": Object {
      "latitude": 54.213,
      "longitude": 19.123,
    },
    "type": "REQUEST_WALKING_DIRECTIONS",
  },
  Object {
    "error": "Can't get location",
    "type": "ERROR_WALKING_DIRECTIONS",
  },
]
`;

exports[`receives new walking directions 1`] = `
Object {
  "coords": Array [
    Object {
      "latitude": 53.213,
      "longitude": 69.123,
    },
    Object {
      "latitude": 54.213,
      "longitude": 19.123,
    },
  ],
  "destination": Object {
    "latitude": 54.213,
    "longitude": 19.123,
  },
  "distance": "10 m",
  "duration": "1 mins",
  "error": "",
  "isFetching": false,
  "origin": Object {
    "latitude": 53.213,
    "longitude": 69.123,
  },
}
`;

exports[`requests and receives new walking directions 1`] = `
Array [
  Object {
    "destination": Object {
      "latitude": 54.213,
      "longitude": 19.123,
    },
    "type": "REQUEST_WALKING_DIRECTIONS",
  },
  Object {
    "destination": Object {
      "latitude": 54.213,
      "longitude": 19.123,
    },
    "origin": Object {
      "latitude": 53.213,
      "longitude": 69.123,
    },
    "route": Object {
      "coords": Array [
        Object {
          "latitude": 38.5,
          "longitude": -120.2,
        },
        Object {
          "latitude": 40.7,
          "longitude": -120.95,
        },
        Object {
          "latitude": 43.252,
          "longitude": -126.453,
        },
      ],
      "distance": "200 m",
      "duration": "2 mins",
    },
    "type": "RECEIVE_WALKING_DIRECTIONS",
  },
]
`;

exports[`requests new walking directions 1`] = `
Object {
  "coords": Array [],
  "destination": Object {
    "latitude": 54.213,
    "longitude": 19.123,
  },
  "distance": "",
  "duration": "",
  "error": "",
  "isFetching": true,
  "origin": Object {
    "latitude": 0,
    "longitude": 0,
  },
}
`;
